# Morse-key-

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  morse-decoder.desktop
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MorseDecoder.cpp  MorseDecoder.h  MorseTable.cpp  MorseTable.h  SerialHandler.cpp  SerialHandler.h  main.cpp
